--- a/_posts/thesis_chapters/2025-3-6-Gdps.md
+++ b/_posts/thesis_chapters/2025-3-6-Gdps.md
@@ -21,26 +21,21 @@ title:  6. Findings - Game Design Patterns
             processes](#the-interrelationship-of-gdps-and-the-development-of-personal-appropriation-of-skills-and-processes)
     -   [GDPs used in the process of guided
         participation](#gdps-used-in-the-process-of-guided-participation)
-        -   [Use of a menu of GDPs to assist project navigation and
-            resource
-            organisation](#use-of-a-menu-of-gdps-to-assist-project-navigation-and-resource-organisation)
+        -   [Use of a menu of GDPs to assist project navigation and use
+            of
+            documentation](#use-of-a-menu-of-gdps-to-assist-project-navigation-and-use-of-documentation)
         -   [GDPs used to scaffold ideation and prioritisation
             processes](#gdps-used-to-scaffold-ideation-and-prioritisation-processes)
         -   [GDPs aiding the process of division of labour
             (1400)](#gdps-aiding-the-process-of-division-of-labour-1400)
-        -   [Discussion of GDPs not aligning with design
-            cycles](#discussion-of-gdps-not-aligning-with-design-cycles)
     -   [Use of GDPs in the cultural plane / community level of
         activity](#use-of-gdps-in-the-cultural-plane-community-level-of-activity)
         -   [The role of GDPs to facilitate learners to design for
             others](#the-role-of-gdps-to-facilitate-learners-to-design-for-others)
         -   [GDPs can facilitate the use of wider funds of knowledge and
             interest](#gdps-can-facilitate-the-use-of-wider-funds-of-knowledge-and-interest)
-        -   [Evolution and propagation of GDPs
-            concepts](#evolution-and-propagation-of-gdps-concepts)
-            -   [GDPs as components of emerging repertoires in an
-                evolving
-                idioculture](#gdps-as-components-of-emerging-repertoires-in-an-evolving-idioculture)
+        -   [The propagation and evolution of GDPs
+            concepts](#the-propagation-and-evolution-of-gdps-concepts)
     -   [Discussion](#discussion)
         -   [Addressing the use of GDPs in relation to theoretical
             understandings of processes of mediation and expanded
@@ -668,7 +663,7 @@ E.g. The use of GDPs to facilitate learners to design for others was present in 
 
 Existing research outlines the motivations for social making incorporating cultural knowledge of gaming within non-formal making activities [@ito_hanging_2010; @gee_what_2003]. Similarly, the ability to make personalised game assets and narratives and sustain engagement in digital making projects [@sefton-green_mapping_2013].
 
-Existing constructivist research in CGD&P also highlight the motivating potential of incorporating home interests in games, coding and media projects [@resnick_mothers_2012; @papert_mindstorms:_1980]; @kafai_constructionist_2015
+Existing constructivist research in CGD&P also highlight the motivating potential of incorporating home interests in games, coding and media projects [@kafai_constructionist_2015; @resnick_mothers_2012; @papert_mindstorms:_1980]]
 
 
 Cocio-cultural research on the tactical use of FoK to overcome barriers to technical environments [@gutierrez_learning_2019-1; @moje2001maestro].
@@ -797,47 +792,32 @@ Attempts to represent the variety of uses of GDPs within the technique of triang
 Both the wider object of activity represented at the community game making process and the narrower object of each game instance, can be interpreted as a boundary object for expanded, interacting processes of activity. Narrower still, returning to Kynigos's interpretation of the half-baked game as a boundary object facilitating communication [@kynigos_half-baked_2007], we GDP concept themselves can also been seen a _boundary objects_ at a greater level of granularity. The work of Stahl and others [@stahl_computer-supported_2006] within the fields of technology use and collaborative learning is relevant here to highlight the importance of language development and the intersubjective interpretation of visual prototypes and gestures as tools in building mutual understanding in the kind of _joint problem space_ we see in this study. While much research on teaching coding addresses the benefits of collaborative approaches (see Chapter 2), fewer studies outline strategies to facilitate such joint attention [@brennan_scratch-ed_2009]. Thus, it potentially fruitful to align relevant uses of GDPs outlined above to existing research on the development of shared language to support joint work and guided participation [@stahl_computer-supported_2006].  
 
 
-### Discussion of GDPs not aligning with design cycles MERGE WITH BELOW?
-
-A possible existing framework on CGD&P to address the process of organising or scaffolding guided participation is that of design cycles. However, observations of participant design behaviour did not align with common design thinking concepts or advocated in design cycle frameworks [@resnick_all_2007; @winarno_steps_2020-1; @dam_5_2024]. The stages were instead fragmented and sometimes happened in parallel. In many interactions, I observed improvisational approaches which incorporated ideation, planning, implementation, and testing in the space of a minute or so. As typified in vignette 1 and 5, some younger participants, in particular, developed impressively fluid practices, demonstrating extremely rapid shifts between code editing, game testing, authoring assets in online tools, and migrating files, often while talking with peers. Some older participants also showed rapid, responsive creativity. Grandad Clive quickly incorporated a boost to player health after a level after being given feedback during playtesting. If I had encouraged participants to follow prescribed design stages, this may have restricted this flexibility in practice [@kuby_rhizomatic_2016].
-
-NOTE REFERENCE TO PLODDING MOVED
-
-Other pairs often adopted a similar spirit of collaborative improvisation. In V7 Dan(p) makes a suggestion - "Use paper to design?" - to which Toby(c) replies, "I'm just going with it."
-
-These examples and many observations in this chapter show a variety of ways that GDPs assist  division of labour, and
-Thus, rather than design cycles a more flexible understanding is needed.
-
-
 ### Expanded object in terms of motivation - fluency towards agency
 
 <!-- NOTE To restructure. -->
 
 
-Given the complexity of the object being worked on in this research, and the disparate  sometimes chaotic nature of the emerging activity, [@biffi_chasing_2017-1; @de_freitas_classroom_2012; @cormier2008rhizomatic],  it is of value to return to existing research on CGD&P in terms of goal formation and motivation in a way which invites discussion on how best to conceptualise the diversity of motivational aspects and resulting impact on diverse goal formation ( & flexible design practices) present in the findings of this chapter.
+Given the complexity of the object being worked on in this research, and multi-faceted nature of the emerging activity, [@biffi_chasing_2017-1; @de_freitas_classroom_2012; @cormier2008rhizomatic], it is not surprising that a diversity of conceptualisations of what experience or attribute is being developed in participant in CGD&P or similar digital making.
 
-One of these motivational factors is remaining engaged or in flow.
-Flow theory in my guiding motivations in terms of participant experience [@perttula_flow_2017]. As a facilitator, my design decisions were often guided by the desire to not detract from participant experience of flow, and thus their coding fluency and engagement in and identification with the overall game-making process. The experience of flow is also a component of the concept of fluency in technology use explored in Chapter 2 in varied forms within constructionist research, technological, digital and computation. The guiding principle being technical proficiency with the relevant technology to share interests and identity within a community of peers. It is of value to now identifying manifestations of such fluency and identify the techniques used to design for this behaviour via in the mediational uses of GDPs outlined in this chapter. In other words, what can be observed about the interaction of participants use of GDPs and the experience of participant fluency?
+However, a related strand grouped around different forms of technical fluency [@papert_technological_1995] was explored in Chapter 2 with common features of domain proficiency, self-expression and identity formation and an experience of flow. One of the motivational factors guiding the evolution of the learning design of this study was to keep participants engaged and thus remaining or in a state of flow [@perttula_flow_2017]. The guiding principle being technical proficiency with the relevant technology to share interests and identity within a community of peers. It is of value to now identifying manifestations of such fluency and identify the techniques used to design for this behaviour via in the mediational uses of GDPs outlined in this chapter. In other words, what can be observed about the interaction of participants use of GDPs and the experience of participant fluency?
 
 <!-- , and to surface additional socio-cultural concepts useful for an enriched understanding of processes as play.   -->
-**Fluency and fluidity in practice**
 
-Younger participants in particular developed impressively fluid practice demonstrating extremely rapids shifts between code editing, game testing, authoring assets in online tools and migrating files often while talking with peers. Older participants also showed rapid, responsive creativity. Above Toby's increased navigational proficiency was interpreted as  transformation of actions into more fluent operations [@leontiev_activity_2009].
+Observations of participant design behaviour did not align with common design thinking concepts or design cycle frameworks advocated in CGD&P [@resnick_all_2007; @winarno_steps_2020-1; @dam_5_2024]. The stages were instead fragmented and sometimes happened in parallel. In many interactions, I observed improvisational approaches which incorporated ideation, planning, implementation, and testing in the space of a minute or so. Younger participants in particular developed impressively fluid practice demonstrating extremely rapids shifts between code editing, game testing, authoring assets in online tools and migrating files often while talking with peers. Older participants also showed rapid, responsive creativity. Above Toby's increased navigational proficiency was interpreted as  transformation of actions into more fluent operations [@leontiev_activity_2009].
 
-Clive quickly incorporated a boost to player health after a level after being given feedback during playtesting. In exploring sound making software Ed and Mark start a process of tinkering and messing about with the capability of the tools which spurs creativity. The joint improvisation created two different soundtracks. This sparks a new proposal to incorporate different soundtracks for different levels. Pairs often adopted a similar spirit of improvisation. For example parent Dan makes a suggestion - "Use paper to design?" - to which Toby replies "I'm just going with it."
+Clive (p) quickly incorporated a boost to player health after a level after being given feedback during playtesting. In exploring sound making software Ed and Mark start a process of tinkering and messing about with the capability of the tools which spurs creativity. The joint improvisation created two different soundtracks. This sparks a new proposal to incorporate different soundtracks for different levels. Pairs often adopted a similar spirit of improvisation. For example parent Dan makes a suggestion - "Use paper to design?" - to which Toby replies "I'm just going with it."
 
-In Chapter 2 the value of a learning design using computational thinking patterns was explore through the concept of proximal flow [@basawapatna_zones_2013], with reponsive just in time documentation aligned with participants goal shown to be more engaging than principles based instruction. This research extends this technique by adding greater specificity in detail of use of patterns and most importantly choice of which patterns participants implement. The user-led process can be examined increased the experience of flow through possibilities for social identity development [@mao_optimal_2016].
+Extending Basawapatna and colleagues [-[@basawapatna_zones_2013]] approach to support proximal flow (see Chapter 2) via just in time documentation aligned with participants goal to support participant engagement, adding greater specificity and choice over which game patterns participants implement. This adaptation help greater alignment with research on the interdependence of flow experience and possibilities for social identity development [@mao_optimal_2016].
 
 
-**limitation of fluency as a concepts**
 
-Returning to the gaps in research outline in Chapter 2 in regarding CGD&P
+<!-- Returning to the gaps in research outline in Chapter 2 in regarding CGD&P
 
-The limitations here are on detail on how to enact identity formation via specific pedagogical strategies. While Chapter 2. explored the value of pair and peer programming, it also highlighted this area as one needed further development.
+The limitations here are on detail on how to enact identity formation via specific pedagogical strategies. While Chapter 2. explored the value of pair and peer programming, it also highlighted this area as one needed further development. -->
 
-The work of the constructionist school is rich in a legacy of designing for fluency, notably including: software microworlds, affordance rich tools sets facilitating open-ended experimentations, accessible multi-media authoring software and community of Scratch. One idea which while present in part in online community of Scratch is that of constructopedia, an evolving resource of inspirational design elements, and accompanying instructions.
+<!-- The work of the constructionist school is rich in a legacy of designing for fluency, notably including: software microworlds, affordance rich tools sets facilitating open-ended experimentations, accessible multi-media authoring software and community of Scratch. One idea which while present in part in online community of Scratch is that of constructopedia, an evolving resource of inspirational design elements, and accompanying instructions. -->
 
-In addition, while the concept flow is well established in socio-cultural research, the more specific concept of technological fluency are less explored. Given its wider scope within CHAT, in Chapter 7 characteristics and processes associated with fluency in this chapter are analysed using the lens of agency, in particular that of relational agency.
+
 
 
 <!-- - as a means of identity formation in groups and collectives [@gee_chapter_2000]
@@ -856,14 +836,9 @@ To extend the concepts of designing for fluidity, it is of value to explore the 
 
 ## Conclusion
 
-On a theoretical plane, this chapter has outlined the evolving use of GDPs as a meditational strategy to develop coding repertoires that are often shared. CHAT frames diverse use of shared resources and concepts, in this case GDPs, as meditational strategies. On a cultural plane, using GDPs can aid the propagation of technical and social processes game making practices within an emerging community of learners. GDPs served both researchers and participants by _providing a common language_ to clarify first learner expression and researcher's analysis of gameplay experience.
+On a theoretical plane, this chapter has outlined the evolving use of GDPs as a meditational strategy to develop coding repertoires that are often shared. CHAT frames diverse use of shared resources and concepts, in this case GDPs, as meditational strategies. On a cultural plane, using GDPs can aid the propagation of technical and social processes game making practices within an emerging community of learners. GDPs served both researchers and participants by _providing a common language_ to clarify first learner expression and researcher's analysis of gameplay experience. The observations of this chapter show the diversity and flexibility of uses of GDP as an mediational tool. The next chapter builds on this to propose the potential of GDPs as a relatable navigational framework, occupying a the space between too concrete to be repeated and too theoretical to be grasped by novice game makers.
 
-The observations of this chapter show the diversity and flexibility of uses of GDP as an mediational tool.
-The next chapter builds on this to propose the potential of GDPs as a relatable navigational framework, occupying a the space between too concrete to be repeated and too theoretical to be grasped by novice game makers.
-
-The findings identified a complex object with a diversity of motivation which pose challenges in communicating in simple terms in terms of what characteristics we are designing learning environments to develop. The candidates of proximal flow and computational fluency were explored in relation to existing research and gaps were identified in there coverage of the importance of learning agency and identify formation.
-
-As such in the next chapter, this gap is addressed via STRONG LINKING MESSAGE HERE.
+The findings identified a complex object with a diversity of motivation which pose challenges in communicating in simple terms in terms of what characteristics we are designing learning environments to develop. The candidates of proximal flow and computational fluency were explored in relation to existing research and gaps were identified in there coverage of the importance of learner agency and identify formation. In the next chapter characteristics and processes associated with fluency in this chapter are analysed using the lens of agency, in particular that of relational agency.
 
 <!-- In line with Sannino [@sannino_transformative_2022], this study frames such innovation within CHAT as transformational agency, a discussion of which forms a significant part of the following chapter. -->
 
