--- a/_posts/thesis_chapters/tocs/2025-3-6-Gdps.md_toc.md
+++ b/_posts/thesis_chapters/tocs/2025-3-6-Gdps.md_toc.md
@@ -8,26 +8,21 @@
             processes](#the-interrelationship-of-gdps-and-the-development-of-personal-appropriation-of-skills-and-processes)
     -   [GDPs used in the process of guided
         participation](#gdps-used-in-the-process-of-guided-participation)
-        -   [Use of a menu of GDPs to assist project navigation and
-            resource
-            organisation](#use-of-a-menu-of-gdps-to-assist-project-navigation-and-resource-organisation)
+        -   [Use of a menu of GDPs to assist project navigation and use
+            of
+            documentation](#use-of-a-menu-of-gdps-to-assist-project-navigation-and-use-of-documentation)
         -   [GDPs used to scaffold ideation and prioritisation
             processes](#gdps-used-to-scaffold-ideation-and-prioritisation-processes)
         -   [GDPs aiding the process of division of labour
             (1400)](#gdps-aiding-the-process-of-division-of-labour-1400)
-        -   [Discussion of GDPs not aligning with design
-            cycles](#discussion-of-gdps-not-aligning-with-design-cycles)
     -   [Use of GDPs in the cultural plane / community level of
         activity](#use-of-gdps-in-the-cultural-plane-community-level-of-activity)
         -   [The role of GDPs to facilitate learners to design for
             others](#the-role-of-gdps-to-facilitate-learners-to-design-for-others)
         -   [GDPs can facilitate the use of wider funds of knowledge and
             interest](#gdps-can-facilitate-the-use-of-wider-funds-of-knowledge-and-interest)
-        -   [Evolution and propagation of GDPs
-            concepts](#evolution-and-propagation-of-gdps-concepts)
-            -   [GDPs as components of emerging repertoires in an
-                evolving
-                idioculture](#gdps-as-components-of-emerging-repertoires-in-an-evolving-idioculture)
+        -   [The propagation and evolution of GDPs
+            concepts](#the-propagation-and-evolution-of-gdps-concepts)
     -   [Discussion](#discussion)
         -   [Addressing the use of GDPs in relation to theoretical
             understandings of processes of mediation and expanded
