--- a/_posts/thesis_chapters/tocs/2025-4-5-Design.md_toc.md
+++ b/_posts/thesis_chapters/tocs/2025-4-5-Design.md_toc.md
@@ -1,67 +1,74 @@
--   [Findings: Design Narrative](#findings-design-narrative)
-    -   [Research Questions April 2025](#research-questions-april-2025)
+-   [Findings: Design
+    Narrative](#findings-design-narrative){#toc-findings-design-narrative}
+    -   [Research Questions April
+        2025](#research-questions-april-2025){#toc-research-questions-april-2025}
     -   [Additional information to help
-        reviewers](#additional-information-to-help-reviewers)
-    -   [Chapter Introduction](#chapter-introduction)
+        reviewers](#additional-information-to-help-reviewers){#toc-additional-information-to-help-reviewers}
+    -   [Chapter
+        Introduction](#chapter-introduction){#toc-chapter-introduction}
     -   [Vignette and broad analysis using an analysis of activity
-        systems](#vignette-and-broad-analysis-using-an-analysis-of-activity-systems)
+        systems](#vignette-and-broad-analysis-using-an-analysis-of-activity-systems){#toc-vignette-and-broad-analysis-using-an-analysis-of-activity-systems}
     -   [Narrative exploration of key areas of contradictions emerging
         in the game-making learning design (in P1
-        /P2?)](#narrative-exploration-of-key-areas-of-contradictions-emerging-in-the-game-making-learning-design-in-p1-p2)
+        /P2?)](#narrative-exploration-of-key-areas-of-contradictions-emerging-in-the-game-making-learning-design-in-p1-p2){#toc-narrative-exploration-of-key-areas-of-contradictions-emerging-in-the-game-making-learning-design-in-p1-p2}
         -   [C1 - Area of contradictions involving organisational issues
             and the use of game programming and asset authoring
-            tools](#c1---area-of-contradictions-involving-organisational-issues-and-the-use-of-game-programming-and-asset-authoring-tools)
+            tools](#c1---area-of-contradictions-involving-organisational-issues-and-the-use-of-game-programming-and-asset-authoring-tools){#toc-c1---area-of-contradictions-involving-organisational-issues-and-the-use-of-game-programming-and-asset-authoring-tools}
             -   [Narrative description of the needs and tensions of
-                design](#narrative-description-of-the-needs-and-tensions-of-design)
+                design](#narrative-description-of-the-needs-and-tensions-of-design){#toc-narrative-description-of-the-needs-and-tensions-of-design}
             -   [Design description: Using a starter game template
                 within a code playground, and graphical asset authoring
-                tools](#design-description-using-a-starter-game-template-within-a-code-playground-and-graphical-asset-authoring-tools)
-            -   [Brief section on Impact](#brief-section-on-impact)
+                tools](#design-description-using-a-starter-game-template-within-a-code-playground-and-graphical-asset-authoring-tools){#toc-design-description-using-a-starter-game-template-within-a-code-playground-and-graphical-asset-authoring-tools}
+            -   [Brief section on
+                Impact](#brief-section-on-impact){#toc-brief-section-on-impact}
         -   [C2 - Contradictions associated with project navigation and
             use of
-            documentation](#c2---contradictions-associated-with-project-navigation-and-use-of-documentation)
-            -   [NEED - Tension](#need---tension)
+            documentation](#c2---contradictions-associated-with-project-navigation-and-use-of-documentation){#toc-c2---contradictions-associated-with-project-navigation-and-use-of-documentation}
+            -   [NEED - Tension](#need---tension){#toc-need---tension}
             -   [(DESIGN AND RESULTS) The use of documentation to
                 address
-                contradictions](#design-and-results-the-use-of-documentation-to-address-contradictions)
-                -   [Quick Start Cards](#quick-start-cards)
-                -   [Structuring instructional tutorial resources and
-                    code
-                    snippets](#structuring-instructional-tutorial-resources-and-code-snippets)
+                contradictions](#design-and-results-the-use-of-documentation-to-address-contradictions){#toc-design-and-results-the-use-of-documentation-to-address-contradictions}
             -   [RESULTS / IMPACT / SIGNPOSTING /
-                LINK](#results-impact-signposting-link)
+                LINK](#results-impact-signposting-link){#toc-results-impact-signposting-link}
         -   [C3 - Responding to tensions and barriers in cultural
             aspects of the game making
-            activity](#c3---responding-to-tensions-and-barriers-in-cultural-aspects-of-the-game-making-activity)
+            activity](#c3---responding-to-tensions-and-barriers-in-cultural-aspects-of-the-game-making-activity){#toc-c3---responding-to-tensions-and-barriers-in-cultural-aspects-of-the-game-making-activity}
             -   [Playing games, identifying game elements & the use of
                 physical
-                materials](#playing-games-identifying-game-elements-the-use-of-physical-materials)
+                materials](#playing-games-identifying-game-elements-the-use-of-physical-materials){#toc-playing-games-identifying-game-elements-the-use-of-physical-materials}
             -   [Social coding processes - MIX OF NEED AND DESIGN AND
-                RESULT?](#social-coding-processes---mix-of-need-and-design-and-result)
-            -   [SUMMARY AND LINK](#summary-and-link)
-    -   [Chapter Discussion](#chapter-discussion)
+                RESULT?](#social-coding-processes---mix-of-need-and-design-and-result){#toc-social-coding-processes---mix-of-need-and-design-and-result}
+            -   [SUMMARY AND
+                LINK](#summary-and-link){#toc-summary-and-link}
+    -   [Chapter
+        Discussion](#chapter-discussion){#toc-chapter-discussion}
         -   [TABLE OF THE DESIGN
-            FACTORS.](#table-of-the-design-factors.)
+            FACTORS.](#table-of-the-design-factors.){#toc-table-of-the-design-factors.}
             -   [Exploring systemic tensions in relation to existing
-                research](#exploring-systemic-tensions-in-relation-to-existing-research)
+                research](#exploring-systemic-tensions-in-relation-to-existing-research){#toc-exploring-systemic-tensions-in-relation-to-existing-research}
             -   [DBR, CHAT & GDPs as the germ cell concept (unit of
-                analysis)](#dbr-chat-gdps-as-the-germ-cell-concept-unit-of-analysis)
+                analysis)](#dbr-chat-gdps-as-the-germ-cell-concept-unit-of-analysis){#toc-dbr-chat-gdps-as-the-germ-cell-concept-unit-of-analysis}
             -   [Outlining the key stages of GDP use in the structural
                 learning
-                design.](#outlining-the-key-stages-of-gdp-use-in-the-structural-learning-design.)
+                design.](#outlining-the-key-stages-of-gdp-use-in-the-structural-learning-design.){#toc-outlining-the-key-stages-of-gdp-use-in-the-structural-learning-design.}
         -   [Summary and link to next
-            chapter/s](#summary-and-link-to-next-chapters)
-    -   [Parking Lot](#parking-lot)
-        -   [Perhaps reintegrate above](#perhaps-reintegrate-above)
+            chapter/s](#summary-and-link-to-next-chapters){#toc-summary-and-link-to-next-chapters}
+    -   [Parking Lot](#parking-lot){#toc-parking-lot}
+        -   [Perhaps reintegrate
+            above](#perhaps-reintegrate-above){#toc-perhaps-reintegrate-above}
             -   [MOVED LINK - Applying activity theory to surface
                 contradictions and design tensions experienced by
                 participants and
-                facilitator/s](#moved-link---applying-activity-theory-to-surface-contradictions-and-design-tensions-experienced-by-participants-and-facilitators)
-            -   [Notes from vignette](#notes-from-vignette)
-            -   [Notes before C1](#notes-before-c1)
-            -   [Dropped from Discussion](#dropped-from-discussion)
+                facilitator/s](#moved-link---applying-activity-theory-to-surface-contradictions-and-design-tensions-experienced-by-participants-and-facilitators){#toc-moved-link---applying-activity-theory-to-surface-contradictions-and-design-tensions-experienced-by-participants-and-facilitators}
+            -   [Notes from
+                vignette](#notes-from-vignette){#toc-notes-from-vignette}
+            -   [Notes before
+                C1](#notes-before-c1){#toc-notes-before-c1}
+            -   [Dropped from
+                Discussion](#dropped-from-discussion){#toc-dropped-from-discussion}
         -   [Moved from Graphical Assets
-            above](#moved-from-graphical-assets-above)
+            above](#moved-from-graphical-assets-above){#toc-moved-from-graphical-assets-above}
         -   [Removed from Docs - add to appendix
-            .tech](#removed-from-docs---add-to-appendix-.tech)
-        -   [Remove 20th April 25](#remove-20th-april-25)
+            .tech](#removed-from-docs---add-to-appendix-.tech){#toc-removed-from-docs---add-to-appendix-.tech}
+        -   [Remove 20th April
+            25](#remove-20th-april-25){#toc-remove-20th-april-25}
