--- a/_posts/thesis_chapters/tocs/2025-4-6-Gdps.md_toc.md
+++ b/_posts/thesis_chapters/tocs/2025-4-6-Gdps.md_toc.md
@@ -1,55 +1,58 @@
--   [Findings: Game Design Patterns](#findings-game-design-patterns)
-    -   [Research Questions April 2025](#research-questions-april-2025)
-    -   [Introduction](#introduction)
+-   [Findings: Game Design
+    Patterns](#findings-game-design-patterns){#toc-findings-game-design-patterns}
+    -   [Research Questions April
+        2025](#research-questions-april-2025){#toc-research-questions-april-2025}
+    -   [Introduction](#introduction){#toc-introduction}
     -   [The role of GDPs in the personal appropriation of concepts and
-        processes](#the-role-of-gdps-in-the-personal-appropriation-of-concepts-and-processes)
+        processes](#the-role-of-gdps-in-the-personal-appropriation-of-concepts-and-processes){#toc-the-role-of-gdps-in-the-personal-appropriation-of-concepts-and-processes}
         -   [The interrelationship of GDPs and the development of
             personal appropriation of skills and
-            processes](#the-interrelationship-of-gdps-and-the-development-of-personal-appropriation-of-skills-and-processes)
+            processes](#the-interrelationship-of-gdps-and-the-development-of-personal-appropriation-of-skills-and-processes){#toc-the-interrelationship-of-gdps-and-the-development-of-personal-appropriation-of-skills-and-processes}
     -   [GDPs used in the process of guided
-        participation](#gdps-used-in-the-process-of-guided-participation)
+        participation](#gdps-used-in-the-process-of-guided-participation){#toc-gdps-used-in-the-process-of-guided-participation}
         -   [Use of a menu of GDPs to assist project navigation and use
             of
-            documentation](#use-of-a-menu-of-gdps-to-assist-project-navigation-and-use-of-documentation)
+            documentation](#use-of-a-menu-of-gdps-to-assist-project-navigation-and-use-of-documentation){#toc-use-of-a-menu-of-gdps-to-assist-project-navigation-and-use-of-documentation}
         -   [GDPs used to scaffold ideation and prioritisation
-            processes](#gdps-used-to-scaffold-ideation-and-prioritisation-processes)
+            processes](#gdps-used-to-scaffold-ideation-and-prioritisation-processes){#toc-gdps-used-to-scaffold-ideation-and-prioritisation-processes}
         -   [GDPs aiding the process of division of labour
-            (1400)](#gdps-aiding-the-process-of-division-of-labour-1400)
+            (1400)](#gdps-aiding-the-process-of-division-of-labour-1400){#toc-gdps-aiding-the-process-of-division-of-labour-1400}
     -   [Use of GDPs in the cultural plane / community level of
-        activity](#use-of-gdps-in-the-cultural-plane-community-level-of-activity)
+        activity](#use-of-gdps-in-the-cultural-plane-community-level-of-activity){#toc-use-of-gdps-in-the-cultural-plane-community-level-of-activity}
         -   [The role of GDPs to facilitate learners to design for
-            others](#the-role-of-gdps-to-facilitate-learners-to-design-for-others)
+            others](#the-role-of-gdps-to-facilitate-learners-to-design-for-others){#toc-the-role-of-gdps-to-facilitate-learners-to-design-for-others}
         -   [GDPs can facilitate the use of wider funds of knowledge and
-            interest](#gdps-can-facilitate-the-use-of-wider-funds-of-knowledge-and-interest)
+            interest](#gdps-can-facilitate-the-use-of-wider-funds-of-knowledge-and-interest){#toc-gdps-can-facilitate-the-use-of-wider-funds-of-knowledge-and-interest}
         -   [The propagation and evolution of GDPs
-            concepts](#the-propagation-and-evolution-of-gdps-concepts)
-    -   [Discussion](#discussion)
+            concepts](#the-propagation-and-evolution-of-gdps-concepts){#toc-the-propagation-and-evolution-of-gdps-concepts}
+    -   [Discussion](#discussion){#toc-discussion}
         -   [Addressing the use of GDPs in relation to theoretical
             understandings of processes of mediation and expanded
             objects of activity
-            -](#addressing-the-use-of-gdps-in-relation-to-theoretical-understandings-of-processes-of-mediation-and-expanded-objects-of-activity--)
+            -](#addressing-the-use-of-gdps-in-relation-to-theoretical-understandings-of-processes-of-mediation-and-expanded-objects-of-activity--){#toc-addressing-the-use-of-gdps-in-relation-to-theoretical-understandings-of-processes-of-mediation-and-expanded-objects-of-activity--}
         -   [Expanded object in terms of motivation - fluency towards
-            agency](#expanded-object-in-terms-of-motivation---fluency-towards-agency)
-    -   [Conclusion](#conclusion)
-    -   [MOVED FROM INTRODUCTION](#moved-from-introduction)
+            agency](#expanded-object-in-terms-of-motivation---fluency-towards-agency){#toc-expanded-object-in-terms-of-motivation---fluency-towards-agency}
+    -   [Conclusion](#conclusion){#toc-conclusion}
+    -   [MOVED FROM
+        INTRODUCTION](#moved-from-introduction){#toc-moved-from-introduction}
         -   [MOVED FROM GUIDED
-            PARTICIPATION](#moved-from-guided-participation)
+            PARTICIPATION](#moved-from-guided-participation){#toc-moved-from-guided-participation}
         -   [Future work on abstraction, layers of abstraction GDPs and
             the MDA
-            framework](#future-work-on-abstraction-layers-of-abstraction-gdps-and-the-mda-framework)
+            framework](#future-work-on-abstraction-layers-of-abstraction-gdps-and-the-mda-framework){#toc-future-work-on-abstraction-layers-of-abstraction-gdps-and-the-mda-framework}
     -   [MOVE FROM cH 7 - ANY SPACE
-        HERE?](#move-from-ch-7---any-space-here)
+        HERE?](#move-from-ch-7---any-space-here){#toc-move-from-ch-7---any-space-here}
     -   [Impact of Side Missions and Maker Types on playtesting
-        behaviours](#impact-of-side-missions-and-maker-types-on-playtesting-behaviours)
+        behaviours](#impact-of-side-missions-and-maker-types-on-playtesting-behaviours){#toc-impact-of-side-missions-and-maker-types-on-playtesting-behaviours}
         -   [Reflection on impact on my design
-            process](#reflection-on-impact-on-my-design-process)
+            process](#reflection-on-impact-on-my-design-process){#toc-reflection-on-impact-on-my-design-process}
         -   [Limitations of observations and careful statements of
-            potential](#limitations-of-observations-and-careful-statements-of-potential)
+            potential](#limitations-of-observations-and-careful-statements-of-potential){#toc-limitations-of-observations-and-careful-statements-of-potential}
         -   [Emerging use of narratives and graphics which drawing on
             home funds of knowledge - AVOID OVERLAP AND CHANGE FOCUS TO
             AGENCY FROM
-            START](#emerging-use-of-narratives-and-graphics-which-drawing-on-home-funds-of-knowledge---avoid-overlap-and-change-focus-to-agency-from-start)
+            START](#emerging-use-of-narratives-and-graphics-which-drawing-on-home-funds-of-knowledge---avoid-overlap-and-change-focus-to-agency-from-start){#toc-emerging-use-of-narratives-and-graphics-which-drawing-on-home-funds-of-knowledge---avoid-overlap-and-change-focus-to-agency-from-start}
             -   [MOVE LATER/ JUST A SIGNPOST TO LATER - PARK, FOR
-                NOW?](#move-later-just-a-signpost-to-later---park-for-now)
+                NOW?](#move-later-just-a-signpost-to-later---park-for-now){#toc-move-later-just-a-signpost-to-later---park-for-now}
         -   [Implications for practitioners - MOVE
-            LATER?](#implications-for-practitioners---move-later)
+            LATER?](#implications-for-practitioners---move-later){#toc-implications-for-practitioners---move-later}
