--- a/_posts/thesis_chapters/tocs/2025-4-6-Gdps.md_toc.md
+++ b/_posts/thesis_chapters/tocs/2025-4-6-Gdps.md_toc.md
@@ -1,58 +1,88 @@
--   [Findings: Game Design
-    Patterns](#findings-game-design-patterns){#toc-findings-game-design-patterns}
-    -   [Research Questions April
-        2025](#research-questions-april-2025){#toc-research-questions-april-2025}
-    -   [Introduction](#introduction){#toc-introduction}
-    -   [The role of GDPs in the personal appropriation of concepts and
-        processes](#the-role-of-gdps-in-the-personal-appropriation-of-concepts-and-processes){#toc-the-role-of-gdps-in-the-personal-appropriation-of-concepts-and-processes}
-        -   [The interrelationship of GDPs and the development of
-            personal appropriation of skills and
-            processes](#the-interrelationship-of-gdps-and-the-development-of-personal-appropriation-of-skills-and-processes){#toc-the-interrelationship-of-gdps-and-the-development-of-personal-appropriation-of-skills-and-processes}
-    -   [GDPs used in the process of guided
-        participation](#gdps-used-in-the-process-of-guided-participation){#toc-gdps-used-in-the-process-of-guided-participation}
-        -   [Use of a menu of GDPs to assist project navigation and use
-            of
-            documentation](#use-of-a-menu-of-gdps-to-assist-project-navigation-and-use-of-documentation){#toc-use-of-a-menu-of-gdps-to-assist-project-navigation-and-use-of-documentation}
-        -   [GDPs used to scaffold ideation and prioritisation
-            processes](#gdps-used-to-scaffold-ideation-and-prioritisation-processes){#toc-gdps-used-to-scaffold-ideation-and-prioritisation-processes}
-        -   [GDPs aiding the process of division of labour
-            (1400)](#gdps-aiding-the-process-of-division-of-labour-1400){#toc-gdps-aiding-the-process-of-division-of-labour-1400}
-    -   [Use of GDPs in the cultural plane / community level of
-        activity](#use-of-gdps-in-the-cultural-plane-community-level-of-activity){#toc-use-of-gdps-in-the-cultural-plane-community-level-of-activity}
-        -   [The role of GDPs to facilitate learners to design for
-            others](#the-role-of-gdps-to-facilitate-learners-to-design-for-others){#toc-the-role-of-gdps-to-facilitate-learners-to-design-for-others}
-        -   [GDPs can facilitate the use of wider funds of knowledge and
-            interest](#gdps-can-facilitate-the-use-of-wider-funds-of-knowledge-and-interest){#toc-gdps-can-facilitate-the-use-of-wider-funds-of-knowledge-and-interest}
-        -   [The propagation and evolution of GDPs
-            concepts](#the-propagation-and-evolution-of-gdps-concepts){#toc-the-propagation-and-evolution-of-gdps-concepts}
-    -   [Discussion](#discussion){#toc-discussion}
-        -   [Addressing the use of GDPs in relation to theoretical
-            understandings of processes of mediation and expanded
-            objects of activity
-            -](#addressing-the-use-of-gdps-in-relation-to-theoretical-understandings-of-processes-of-mediation-and-expanded-objects-of-activity--){#toc-addressing-the-use-of-gdps-in-relation-to-theoretical-understandings-of-processes-of-mediation-and-expanded-objects-of-activity--}
-        -   [Expanded object in terms of motivation - fluency towards
-            agency](#expanded-object-in-terms-of-motivation---fluency-towards-agency){#toc-expanded-object-in-terms-of-motivation---fluency-towards-agency}
-    -   [Conclusion](#conclusion){#toc-conclusion}
-    -   [MOVED FROM
-        INTRODUCTION](#moved-from-introduction){#toc-moved-from-introduction}
-        -   [MOVED FROM GUIDED
-            PARTICIPATION](#moved-from-guided-participation){#toc-moved-from-guided-participation}
-        -   [Future work on abstraction, layers of abstraction GDPs and
-            the MDA
-            framework](#future-work-on-abstraction-layers-of-abstraction-gdps-and-the-mda-framework){#toc-future-work-on-abstraction-layers-of-abstraction-gdps-and-the-mda-framework}
-    -   [MOVE FROM cH 7 - ANY SPACE
-        HERE?](#move-from-ch-7---any-space-here){#toc-move-from-ch-7---any-space-here}
-    -   [Impact of Side Missions and Maker Types on playtesting
-        behaviours](#impact-of-side-missions-and-maker-types-on-playtesting-behaviours){#toc-impact-of-side-missions-and-maker-types-on-playtesting-behaviours}
-        -   [Reflection on impact on my design
-            process](#reflection-on-impact-on-my-design-process){#toc-reflection-on-impact-on-my-design-process}
-        -   [Limitations of observations and careful statements of
-            potential](#limitations-of-observations-and-careful-statements-of-potential){#toc-limitations-of-observations-and-careful-statements-of-potential}
-        -   [Emerging use of narratives and graphics which drawing on
-            home funds of knowledge - AVOID OVERLAP AND CHANGE FOCUS TO
-            AGENCY FROM
-            START](#emerging-use-of-narratives-and-graphics-which-drawing-on-home-funds-of-knowledge---avoid-overlap-and-change-focus-to-agency-from-start){#toc-emerging-use-of-narratives-and-graphics-which-drawing-on-home-funds-of-knowledge---avoid-overlap-and-change-focus-to-agency-from-start}
-            -   [MOVE LATER/ JUST A SIGNPOST TO LATER - PARK, FOR
-                NOW?](#move-later-just-a-signpost-to-later---park-for-now){#toc-move-later-just-a-signpost-to-later---park-for-now}
-        -   [Implications for practitioners - MOVE
-            LATER?](#implications-for-practitioners---move-later){#toc-implications-for-practitioners---move-later}
+- <a href="#findings-game-design-patterns"
+  id="toc-findings-game-design-patterns">Findings: Game Design
+  Patterns</a>
+  - <a href="#research-questions-april-2025"
+    id="toc-research-questions-april-2025">Research Questions April 2025</a>
+  - <a href="#introduction" id="toc-introduction">Introduction</a>
+  - <a
+    href="#the-role-of-gdps-in-the-personal-appropriation-of-concepts-and-processes"
+    id="toc-the-role-of-gdps-in-the-personal-appropriation-of-concepts-and-processes">The
+    role of GDPs in the personal appropriation of concepts and processes</a>
+    - <a
+      href="#the-interrelationship-of-gdps-and-the-development-of-personal-appropriation-of-skills-and-processes"
+      id="toc-the-interrelationship-of-gdps-and-the-development-of-personal-appropriation-of-skills-and-processes">The
+      interrelationship of GDPs and the development of personal appropriation
+      of skills and processes</a>
+  - <a href="#gdps-used-in-the-process-of-guided-participation"
+    id="toc-gdps-used-in-the-process-of-guided-participation">GDPs used in
+    the process of guided participation</a>
+    - <a
+      href="#use-of-a-menu-of-gdps-to-assist-project-navigation-and-use-of-documentation"
+      id="toc-use-of-a-menu-of-gdps-to-assist-project-navigation-and-use-of-documentation">Use
+      of a menu of GDPs to assist project navigation and use of
+      documentation</a>
+    - <a href="#gdps-used-to-scaffold-ideation-and-prioritisation-processes"
+      id="toc-gdps-used-to-scaffold-ideation-and-prioritisation-processes">GDPs
+      used to scaffold ideation and prioritisation processes</a>
+    - <a href="#gdps-aiding-the-process-of-division-of-labour-1400"
+      id="toc-gdps-aiding-the-process-of-division-of-labour-1400">GDPs aiding
+      the process of division of labour (1400)</a>
+  - <a href="#use-of-gdps-in-the-cultural-plane-community-level-of-activity"
+    id="toc-use-of-gdps-in-the-cultural-plane-community-level-of-activity">Use
+    of GDPs in the cultural plane / community level of activity</a>
+    - <a href="#the-role-of-gdps-to-facilitate-learners-to-design-for-others"
+      id="toc-the-role-of-gdps-to-facilitate-learners-to-design-for-others">The
+      role of GDPs to facilitate learners to design for others</a>
+    - <a
+      href="#gdps-can-facilitate-the-use-of-wider-funds-of-knowledge-and-interest"
+      id="toc-gdps-can-facilitate-the-use-of-wider-funds-of-knowledge-and-interest">GDPs
+      can facilitate the use of wider funds of knowledge and interest</a>
+    - <a href="#the-propagation-and-evolution-of-gdps-concepts"
+      id="toc-the-propagation-and-evolution-of-gdps-concepts">The propagation
+      and evolution of GDPs concepts</a>
+  - <a href="#discussion" id="toc-discussion">Discussion</a>
+    - <a
+      href="#addressing-the-use-of-gdps-in-relation-to-theoretical-understandings-of-processes-of-mediation-and-expanded-objects-of-activity--"
+      id="toc-addressing-the-use-of-gdps-in-relation-to-theoretical-understandings-of-processes-of-mediation-and-expanded-objects-of-activity--">Addressing
+      the use of GDPs in relation to theoretical understandings of processes
+      of mediation and expanded objects of activity -</a>
+    - <a
+      href="#expanded-object-in-terms-of-motivation---fluency-towards-agency"
+      id="toc-expanded-object-in-terms-of-motivation---fluency-towards-agency">Expanded
+      object in terms of motivation - fluency towards agency</a>
+  - <a href="#conclusion" id="toc-conclusion">Conclusion</a>
+  - <a href="#moved-from-introduction"
+    id="toc-moved-from-introduction">MOVED FROM INTRODUCTION</a>
+    - <a href="#moved-from-guided-participation"
+      id="toc-moved-from-guided-participation">MOVED FROM GUIDED
+      PARTICIPATION</a>
+    - <a
+      href="#future-work-on-abstraction-layers-of-abstraction-gdps-and-the-mda-framework"
+      id="toc-future-work-on-abstraction-layers-of-abstraction-gdps-and-the-mda-framework">Future
+      work on abstraction, layers of abstraction GDPs and the MDA
+      framework</a>
+  - <a href="#move-from-ch-7---any-space-here"
+    id="toc-move-from-ch-7---any-space-here">MOVE FROM cH 7 - ANY SPACE
+    HERE?</a>
+  - <a
+    href="#impact-of-side-missions-and-maker-types-on-playtesting-behaviours"
+    id="toc-impact-of-side-missions-and-maker-types-on-playtesting-behaviours">Impact
+    of Side Missions and Maker Types on playtesting behaviours</a>
+    - <a href="#reflection-on-impact-on-my-design-process"
+      id="toc-reflection-on-impact-on-my-design-process">Reflection on impact
+      on my design process</a>
+    - <a
+      href="#limitations-of-observations-and-careful-statements-of-potential"
+      id="toc-limitations-of-observations-and-careful-statements-of-potential">Limitations
+      of observations and careful statements of potential</a>
+    - <a
+      href="#emerging-use-of-narratives-and-graphics-which-drawing-on-home-funds-of-knowledge---avoid-overlap-and-change-focus-to-agency-from-start"
+      id="toc-emerging-use-of-narratives-and-graphics-which-drawing-on-home-funds-of-knowledge---avoid-overlap-and-change-focus-to-agency-from-start">Emerging
+      use of narratives and graphics which drawing on home funds of knowledge
+      - AVOID OVERLAP AND CHANGE FOCUS TO AGENCY FROM START</a>
+      - <a href="#move-later-just-a-signpost-to-later---park-for-now"
+        id="toc-move-later-just-a-signpost-to-later---park-for-now">MOVE LATER/
+        JUST A SIGNPOST TO LATER - PARK, FOR NOW?</a>
+    - <a href="#implications-for-practitioners---move-later"
+      id="toc-implications-for-practitioners---move-later">Implications for
+      practitioners - MOVE LATER?</a>
