--- a/_posts/thesis_chapters/tocs/2025-4-5-Design.md_toc.md
+++ b/_posts/thesis_chapters/tocs/2025-4-5-Design.md_toc.md
@@ -1,98 +1,67 @@
-- <a href="#findings-design-narrative"
-  id="toc-findings-design-narrative">Findings: Design Narrative</a>
-  - <a href="#research-questions-april-2025"
-    id="toc-research-questions-april-2025">Research Questions April 2025</a>
-  - <a href="#additional-information-to-help-reviewers"
-    id="toc-additional-information-to-help-reviewers">Additional information
-    to help reviewers</a>
-  - <a href="#chapter-introduction" id="toc-chapter-introduction">Chapter
-    Introduction</a>
-  - <a
-    href="#vignette-and-broad-analysis-using-an-analysis-of-activity-systems"
-    id="toc-vignette-and-broad-analysis-using-an-analysis-of-activity-systems">Vignette
-    and broad analysis using an analysis of activity systems</a>
-  - <a
-    href="#narrative-exploration-of-key-areas-of-contradictions-emerging-in-the-game-making-learning-design-in-p1-p2"
-    id="toc-narrative-exploration-of-key-areas-of-contradictions-emerging-in-the-game-making-learning-design-in-p1-p2">Narrative
-    exploration of key areas of contradictions emerging in the game-making
-    learning design (in P1 /P2?)</a>
-    - <a
-      href="#c1---area-of-contradictions-involving-organisational-issues-and-the-use-of-game-programming-and-asset-authoring-tools"
-      id="toc-c1---area-of-contradictions-involving-organisational-issues-and-the-use-of-game-programming-and-asset-authoring-tools">C1
-      - Area of contradictions involving organisational issues and the use of
-      game programming and asset authoring tools</a>
-      - <a href="#narrative-description-of-the-needs-and-tensions-of-design"
-        id="toc-narrative-description-of-the-needs-and-tensions-of-design">Narrative
-        description of the needs and tensions of design</a>
-      - <a
-        href="#design-description-using-a-starter-game-template-within-a-code-playground-and-graphical-asset-authoring-tools"
-        id="toc-design-description-using-a-starter-game-template-within-a-code-playground-and-graphical-asset-authoring-tools">Design
-        description: Using a starter game template within a code playground, and
-        graphical asset authoring tools</a>
-      - <a href="#brief-section-on-impact"
-        id="toc-brief-section-on-impact">Brief section on Impact</a>
-    - <a
-      href="#c2---contradictions-associated-with-project-navigation-and-use-of-documentation"
-      id="toc-c2---contradictions-associated-with-project-navigation-and-use-of-documentation">C2
-      - Contradictions associated with project navigation and use of
-      documentation</a>
-      - <a href="#need---tension" id="toc-need---tension">NEED - Tension</a>
-      - <a
-        href="#design-and-results-the-use-of-documentation-to-address-contradictions"
-        id="toc-design-and-results-the-use-of-documentation-to-address-contradictions">(DESIGN
-        AND RESULTS) The use of documentation to address contradictions</a>
-      - <a href="#results-impact-signposting-link"
-        id="toc-results-impact-signposting-link">RESULTS / IMPACT / SIGNPOSTING
-        / LINK</a>
-    - <a
-      href="#c3---responding-to-tensions-and-barriers-in-cultural-aspects-of-the-game-making-activity"
-      id="toc-c3---responding-to-tensions-and-barriers-in-cultural-aspects-of-the-game-making-activity">C3
-      - Responding to tensions and barriers in cultural aspects of the game
-      making activity</a>
-      - <a
-        href="#playing-games-identifying-game-elements-the-use-of-physical-materials"
-        id="toc-playing-games-identifying-game-elements-the-use-of-physical-materials">Playing
-        games, identifying game elements &amp; the use of physical materials</a>
-      - <a href="#social-coding-processes---mix-of-need-and-design-and-result"
-        id="toc-social-coding-processes---mix-of-need-and-design-and-result">Social
-        coding processes - MIX OF NEED AND DESIGN AND RESULT?</a>
-      - <a href="#summary-and-link" id="toc-summary-and-link">SUMMARY AND
-        LINK</a>
-  - <a href="#chapter-discussion" id="toc-chapter-discussion">Chapter
-    Discussion</a>
-    - <a href="#table-of-the-design-factors."
-      id="toc-table-of-the-design-factors.">TABLE OF THE DESIGN FACTORS.</a>
-      - <a href="#exploring-systemic-tensions-in-relation-to-existing-research"
-        id="toc-exploring-systemic-tensions-in-relation-to-existing-research">Exploring
-        systemic tensions in relation to existing research</a>
-      - <a href="#dbr-chat-gdps-as-the-germ-cell-concept-unit-of-analysis"
-        id="toc-dbr-chat-gdps-as-the-germ-cell-concept-unit-of-analysis">DBR,
-        CHAT &amp; GDPs as the germ cell concept (unit of analysis)</a>
-      - <a
-        href="#outlining-the-key-stages-of-gdp-use-in-the-structural-learning-design."
-        id="toc-outlining-the-key-stages-of-gdp-use-in-the-structural-learning-design.">Outlining
-        the key stages of GDP use in the structural learning design.</a>
-    - <a href="#summary-and-link-to-next-chapters"
-      id="toc-summary-and-link-to-next-chapters">Summary and link to next
-      chapter/s</a>
-  - <a href="#parking-lot" id="toc-parking-lot">Parking Lot</a>
-    - <a href="#perhaps-reintegrate-above"
-      id="toc-perhaps-reintegrate-above">Perhaps reintegrate above</a>
-      - <a
-        href="#moved-link---applying-activity-theory-to-surface-contradictions-and-design-tensions-experienced-by-participants-and-facilitators"
-        id="toc-moved-link---applying-activity-theory-to-surface-contradictions-and-design-tensions-experienced-by-participants-and-facilitators">MOVED
-        LINK - Applying activity theory to surface contradictions and design
-        tensions experienced by participants and facilitator/s</a>
-      - <a href="#notes-from-vignette" id="toc-notes-from-vignette">Notes from
-        vignette</a>
-      - <a href="#notes-before-c1" id="toc-notes-before-c1">Notes before C1</a>
-      - <a href="#dropped-from-discussion"
-        id="toc-dropped-from-discussion">Dropped from Discussion</a>
-    - <a href="#moved-from-graphical-assets-above"
-      id="toc-moved-from-graphical-assets-above">Moved from Graphical Assets
-      above</a>
-    - <a href="#removed-from-docs---add-to-appendix-.tech"
-      id="toc-removed-from-docs---add-to-appendix-.tech">Removed from Docs -
-      add to appendix .tech</a>
-    - <a href="#remove-20th-april-25" id="toc-remove-20th-april-25">Remove
-      20th April 25</a>
+-   [Findings: Design Narrative](#findings-design-narrative)
+    -   [Research Questions April 2025](#research-questions-april-2025)
+    -   [Additional information to help
+        reviewers](#additional-information-to-help-reviewers)
+    -   [Chapter Introduction](#chapter-introduction)
+    -   [Vignette and broad analysis using an analysis of activity
+        systems](#vignette-and-broad-analysis-using-an-analysis-of-activity-systems)
+    -   [Narrative exploration of key areas of contradictions emerging
+        in the game-making learning design (in P1
+        /P2?)](#narrative-exploration-of-key-areas-of-contradictions-emerging-in-the-game-making-learning-design-in-p1-p2)
+        -   [C1 - Area of contradictions involving organisational issues
+            and the use of game programming and asset authoring
+            tools](#c1---area-of-contradictions-involving-organisational-issues-and-the-use-of-game-programming-and-asset-authoring-tools)
+            -   [Narrative description of the needs and tensions of
+                design](#narrative-description-of-the-needs-and-tensions-of-design)
+            -   [Design description: Using a starter game template
+                within a code playground, and graphical asset authoring
+                tools](#design-description-using-a-starter-game-template-within-a-code-playground-and-graphical-asset-authoring-tools)
+            -   [Brief section on Impact](#brief-section-on-impact)
+        -   [C2 - Contradictions associated with project navigation and
+            use of
+            documentation](#c2---contradictions-associated-with-project-navigation-and-use-of-documentation)
+            -   [NEED - Tension](#need---tension)
+            -   [(DESIGN AND RESULTS) The use of documentation to
+                address
+                contradictions](#design-and-results-the-use-of-documentation-to-address-contradictions)
+                -   [Quick Start Cards](#quick-start-cards)
+                -   [Structuring instructional tutorial resources and
+                    code
+                    snippets](#structuring-instructional-tutorial-resources-and-code-snippets)
+            -   [RESULTS / IMPACT / SIGNPOSTING /
+                LINK](#results-impact-signposting-link)
+        -   [C3 - Responding to tensions and barriers in cultural
+            aspects of the game making
+            activity](#c3---responding-to-tensions-and-barriers-in-cultural-aspects-of-the-game-making-activity)
+            -   [Playing games, identifying game elements & the use of
+                physical
+                materials](#playing-games-identifying-game-elements-the-use-of-physical-materials)
+            -   [Social coding processes - MIX OF NEED AND DESIGN AND
+                RESULT?](#social-coding-processes---mix-of-need-and-design-and-result)
+            -   [SUMMARY AND LINK](#summary-and-link)
+    -   [Chapter Discussion](#chapter-discussion)
+        -   [TABLE OF THE DESIGN
+            FACTORS.](#table-of-the-design-factors.)
+            -   [Exploring systemic tensions in relation to existing
+                research](#exploring-systemic-tensions-in-relation-to-existing-research)
+            -   [DBR, CHAT & GDPs as the germ cell concept (unit of
+                analysis)](#dbr-chat-gdps-as-the-germ-cell-concept-unit-of-analysis)
+            -   [Outlining the key stages of GDP use in the structural
+                learning
+                design.](#outlining-the-key-stages-of-gdp-use-in-the-structural-learning-design.)
+        -   [Summary and link to next
+            chapter/s](#summary-and-link-to-next-chapters)
+    -   [Parking Lot](#parking-lot)
+        -   [Perhaps reintegrate above](#perhaps-reintegrate-above)
+            -   [MOVED LINK - Applying activity theory to surface
+                contradictions and design tensions experienced by
+                participants and
+                facilitator/s](#moved-link---applying-activity-theory-to-surface-contradictions-and-design-tensions-experienced-by-participants-and-facilitators)
+            -   [Notes from vignette](#notes-from-vignette)
+            -   [Notes before C1](#notes-before-c1)
+            -   [Dropped from Discussion](#dropped-from-discussion)
+        -   [Moved from Graphical Assets
+            above](#moved-from-graphical-assets-above)
+        -   [Removed from Docs - add to appendix
+            .tech](#removed-from-docs---add-to-appendix-.tech)
+        -   [Remove 20th April 25](#remove-20th-april-25)
